<?xml version="1.0"?>
<package>
  <name>gazebo_models</name>
  <version>1.0.0</version>
  <description>Keeping track of the models that I've made</description>

  <maintainer email="kozasa0820jps@gmail.com">Shuhei Kozasa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
